kompose-openshift-files/rtview-history-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --provider openshift --file ..\docker-compose.yml
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: rtview-history-db
  name: rtview-history-db
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: rtview-history-db
status:
  loadBalancer: {}
